src/style.css
body {
  margin-top: 0;
}

.header-container {
  display: flex;
  background: #6cf;
}

.header-list {
  display: flex;
  justify-content: space-evenly;
}

.header-list li {
  font-size: 1.3rem;
  padding: 0 1.5rem;
  list-style-type: none;
}

.header-list li a {
  color: black;
}

footer {
  position: fixed;
  bottom: 0;
  margin: 0;
  width: 100%;
  height: 60px;
  background: #6cf;
  text-align: center;
}

